# hushbell-poc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: index.html
plans/: anti-conditioning-ultraplan.md
src/hushbell/: __init__.py  __main__.py  audio_engine.py  battery_sim.py  config.py  controller.py  mqtt_bridge.py  notification.py  pleasant_tones.py  spectrum.py  visual_engine.py
src/hushbell/triggers/: __init__.py  http_trigger.py
tests/: test_audio_engine.py  test_battery_sim.py  test_controller.py  test_frequency_strategy.py  test_mqtt_bridge.py  test_visual_engine.py
web/: index.html
